--- a/app/src/main/res/layout/fragment_login_model1.xml
+++ b/app/src/main/res/layout/fragment_login_model1.xml
@@ -1,19 +1,23 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     tools:context="com.cylan.jiafeigou.n.view.login.LoginModel1Fragment">
 
     <include
-        android:id="@+id/layout_login_top"
+        android:id="@+id/rLayout_login_top"
         layout="@layout/layout_login_top_item"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="48dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="33dp" />
 
     <FrameLayout
         android:id="@+id/fLayout_login_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/layout_login_top" />
+        android:layout_below="@+id/rLayout_login_top" />
 
-</FrameLayout>
+</RelativeLayout>
