--- a/app/src/main/res/anim/slide_down_out.xml
+++ b/app/src/main/res/anim/slide_down_out.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<set android:interpolator="@android:anim/accelerate_interpolator"
-	xmlns:android="http://schemas.android.com/apk/res/android">
-	<translate android:duration="300"
-		android:fromYDelta="0.0"
-		android:toYDelta="100.0%p" />
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:interpolator="@android:anim/accelerate_interpolator">
+    <translate
+        android:duration="300"
+        android:fromYDelta="0.0"
+        android:toYDelta="100.0%p" />
 </set>
