--- a/app/src/main/res/layout/fragment_register_set_pwd.xml
+++ b/app/src/main/res/layout/fragment_register_set_pwd.xml
@@ -25,6 +25,7 @@
             <EditText
                 android:id="@+id/et_login_pwd"
                 style="@style/login_model_common_edittext_style"
+                android:maxLength="12"
                 android:layout_centerInParent="true"
                 android:hint="请输入6~12密码"
                 android:inputType="textPassword" />
